演習問題-修正

--- a/20230728_hoshi.html
+++ b/20230728_hoshi.html
@@ -13,7 +13,9 @@
         <li><a href="#home">ホーム</a></li>
         <li><a href="#cominfo">企業情報</a></li>
         <li><a href="#about">会社概要</a></li>
-        <li><a href="https://www.google.com/search?q=%E3%82%88%E3%81%8F%E3%81%82%E3%82%8B%E8%B3%AA%E5%95%8F&rlz=1C1JCYX_jaJP1066JP1067&sxsrf=AB5stBgxeZl9ItIlKNtpABD7yJd-n0hUdg%3A1690530305392&ei=AXLDZNm_F_WF2roP_8iNuA0&ved=0ahUKEwiZxNaS9LCAAxX1glYBHX9kA9cQ4dUDCA8&oq=%E3%82%88%E3%81%8F%E3%81%82%E3%82%8B%E8%B3%AA%E5%95%8F&gs_lp=Egxnd3Mtd2l6LXNlcnAiEuOCiOOBj-OBguOCi-izquWVj0gAUABYAHAAeAGQAQCYAQCgAQCqAQC4AQzIAQDiAwQYACBB&sclient=gws-wiz-serp">よくある質問</a></li>
+        <li><a
+                href="https://www.google.com/search?q=%E3%82%88%E3%81%8F%E3%81%82%E3%82%8B%E8%B3%AA%E5%95%8F&rlz=1C1JCYX_jaJP1066JP1067&sxsrf=AB5stBgxeZl9ItIlKNtpABD7yJd-n0hUdg%3A1690530305392&ei=AXLDZNm_F_WF2roP_8iNuA0&ved=0ahUKEwiZxNaS9LCAAxX1glYBHX9kA9cQ4dUDCA8&oq=%E3%82%88%E3%81%8F%E3%81%82%E3%82%8B%E8%B3%AA%E5%95%8F&gs_lp=Egxnd3Mtd2l6LXNlcnAiEuOCiOOBj-OBguOCi-izquWVj0gAUABYAHAAeAGQAQCYAQCgAQCqAQC4AQzIAQDiAwQYACBB&sclient=gws-wiz-serp">よくある質問</a>
+        </li>
         <li><a href="#inq">お問い合わせ</a></li>
     </ul>
     <img src="../img/mv.png" alt="img">
@@ -49,7 +51,7 @@
     <form action="detail.html" method="get">
         <label> 会社名<input type="text" name="company.name" /> </label><br />
         <label> お名前<input type="text" name="name" /> </label><br />
-        <label> メールアドレス<input type="company.email" name="name" /> </label><br />
+        <label> メールアドレス<input type="email" name="compay.mail" /> </label><br />
         <label> お問い合わせ内容<textarea name="textarea" cols="30" rows="5"></textarea></label>
     </form>
     <small>© 2020 TECK.inc</small>
